# base32-bytestring

./: .travis.yml  ChangeLog  README.md  TODO.org  base32-bytestring.cabal  changelog
bench/: Main.hs
src/Data/ByteString/: Base32.hi  Base32.hs
src/Data/ByteString/Base32/: Hex.hs  Internal.hs
tests/Data/ByteString/: Base32Spec.hs
tests/Data/ByteString/Base32/: HexSpec.hs
