name:                base32-bytestring
version:             0.0.0.0
license:             BSD3
license-file:        LICENSE
author:              Sam Truzjan
maintainer:          Sam Truzjan <pxqr.sta@gmail.com>
copyright:           (c) 2013 Sam Truzjan
category:            Codec, Data
build-type:          Simple
cabal-version:       >= 1.10
synopsis: Fast base32 and base32hex codec for ByteStrings
description:
  base32 and base32hex codec according to RFC4648
  <http://tools.ietf.org/html/rfc4648>
  This package have API similar to base64-bytestring.

source-repository head
  type:                git
  location:            git://github.com/cobit/base32.git
  branch:              master

source-repository this
  type:                git
  location:            git://github.com/cobit/base32.git
  branch:              master
  tag:                 v0.0.0.0

library
  default-language:    Haskell2010
  default-extensions:
  hs-source-dirs:      src
  exposed-modules:     Data.ByteString.Base32
                     , Data.ByteString.Base32.Hex
  other-modules:       Data.ByteString.Base32.Internal
  build-depends:       base       == 4.*
                     , bytestring == 0.10.*
                     , cpu
                     , bits-extras
  ghc-options:         -O2 -Wall

test-suite spec
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Spec.hs
  build-depends:       base   == 4.*
                     , base32-bytestring
                     , bytestring
                     , hspec  >= 1.7
                     , QuickCheck
  ghc-options:         -Wall

benchmark bench
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      bench
  main-is:             Main.hs
  build-depends:       base == 4.*
                     , base32-bytestring
                     , bytestring
                     , criterion
  ghc-options:         -O2 -Wall -fno-warn-orphans
